- search.c:
  replace_regexp()
	- Remove unnecessary casting of c to int. (DLR)
- text.c:
  execute_command()
	- Remove the marking of the file as modified, as do_insertfile()
	  now handles that. (DLR)
- winio.c:
  parse_kbinput()
	- Properly handle combined meta and escape sequences, so that
	  e.g. Meta-+ will work properly when the + is on the numeric
	  keypad and NumLock is off. (DLR)
	- Translate extended keypad keys to their ASCII equivalents even
	  when we hit Escape once or twice before typing them, for
	  consistency. (DLR)
	- If they're defined, translate KEY_SUP into NANO_PREVLINE_KEY
	  and KEY_SDOWN into NANO_NEXTLINE_KEY, since they are sometimes
	  generated by Shift-Up and Shift-Down. (DLR)
  parse_escape_seq_kbinput()
	- Handle unknown and unignored escape sequences once here
	  instead of twice in parse_kbinput(). (DLR)
  display_string()
	- Properly handle buf[start_index]'s being a null terminator.
	  (DLR)
  titlebar()
	- Don't display overly long filenames with ellipses if the
	  number of columns is extremely small. (DLR)
	- Don't display any blank space for the state if we're in the
	  file browser, as Pico doesn't. (DLR)
- configure.ac:
	- If regex.h isn't found, display an error message if we try to
	  enable color support. (DLR)
	- Fix the spacing of the error message displayed when slcurses.h
	  isn't found. (DLR)
	- If we use the --disable-wrapping option, ignore the
	  --disable-wrapping-as-root option. (DLR)
	- Add minor cosmetic tweaks. (DLR)
- doc/syntax/c.nanorc:
	- Since .i and .ii are preprocessed C and C++ output, colorize
	  them here. (Mike Frysinger)
- doc/syntax/ruby.nanorc:
	- Add missing blank line after the first comment, for
	  consistency. (DLR)
	- Improve highlighting of constants. (John M. Gabriele, minor
	  tweaks by DLR)

GNU nano 1.3.12 - 2006.06.26
- General:
	- Miscellaneous comment fixes. (DLR)
	- Implement filename searches in the file browser.  New
	  functions filesearch_init(), findnextfile(),